# sst-fastapi

./: .gitignore  README.md  package.json  pnpm-lock.yaml  sst.config.ts
.github/workflows/: production.yaml
app/: Dockerfile  README.md  main.py  pyproject.toml
app/app/functions/: hello.py
app/core/: models.py
stacks/: FastApiStack.ts
