[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
fastapi-cli = "^0.0.4"
uvicorn = "^0.30.1"
mangum = "^0.17.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
